--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jsegobia0.io/react-portfolio",
+  "homepage": "https://jsegobia0.github.io/react-portfolio/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
